Changelog
=========

7.1-dev - (unreleased)
----------------------
* Feature: added information for contributors
  [ciobabog refs #13892]
* Change: Added description to controlpanel fields
  [szabozo0]
* Bug fix: fixed small bug in code that broke get_daviz when daviz was deleted
  [tiberich #13993]

7.0 - (2013-02-25)
------------------
* Change: removed redundant and unnecessary data_source provenance code,
  which is already better implemented with @@data.info
  [demarant refs #9561 and #9571]

6.4 - (2013-02-04)
------------------
* Feature: Support data annotations
  [voineali refs #9558]

6.3 - (2013-01-15)
------------------
* Upgrade step: Within "Plone > Site setup > Add-ons" run upgrades (if available)
  for the following packages in the same order as bellow:
  - EEA Versions (eea.forms)
  - EEA Forms (eea.forms)
  - EEA Sparql (eea.sparql)
  - EEA Visualization API (eea.app.visualisation);
  - EEA Google Charts (eea.googlecharts);
  - EEA Exhibit (eea.exhibit);
  - EEA Daviz (eea.daviz)
* Feature: Added italian translations
  [simahawk]

6.2 - (2013-01-10)
------------------
* Upgrade Step: if you have eea.relations installed in your system,
  in portal_setup, Import tab, select the profile "EEA Daviz: eea.relations
  integration" and import the Javascripts Registry step.
* Upgrade step: Within "Plone > Site setup > Add-ons" click on
  upgrade button available for eea.daviz
* Feature: Added WYSIWYG table editor (SlickGrid) when one directly copy&paste
  dataset within free text field
  [voineali refs #9610]
* Feature: added integration with eea.relations
  [tiberich refs #9571]

6.1 - (2012-11-09)
------------------
* Upgrade step: Within "Plone > Site setup > Add-ons" click on
  upgrade button available for eea.daviz
* Feature: Added i18n translations
  [avoinea]
* Feature: Possibility to add data source from a external URL
  [voineali refs #9576]

6.0 - (2012-10-08)
------------------